--- a/online-library-management-system/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -2,6 +2,143 @@
     ViewData["Title"] = "Dashboard";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Dashboard</h1>
+<!-- Content Header (Page header) -->
+<div class="content-header">
+    <div class="d-flex align-items-center">
+        <div class="me-auto">
+            <h3 class="page-title">Dashboard</h3>
+        </div>
+    </div>
 </div>
+
+<section class="content">
+    <div class="row">
+        <div class="col-12">
+            <div class="box">
+                <div class="row g-0 py-2">
+                    <div class="col-12 col-lg-3">
+                        <div class="box-body be-1 border-light">
+                            <div class="flexbox mb-1">
+                                <span>
+                                    <span class="fa fa-users fs-40"><span class="path1"></span><span class="path2"></span></span><br>
+                                    Total Users
+                                </span>
+                                <span class="text-primary fs-40">@Model.TotalUsers</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-3 hidden-down">
+                        <div class="box-body be-1 border-light">
+                            <div class="flexbox mb-1">
+                                <span>
+                                    <span class="fa fa-book fs-40"><span class="path1"></span><span class="path2"></span></span><br>
+                                    Total Items (Books/CDs)
+                                </span>
+                                <span class="text-info fs-40">@Model.TotalItems</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-3  hidden-down">
+                        <div class="box-body be-1 border-light">
+                            <div class="flexbox mb-1">
+                                <span>
+                                    <span class="fa fa-calendar fs-40"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span><br>
+                                    Pending Reservations
+                                </span>
+                                <span class="text-warning fs-40">@Model.PendingReservations</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-3  hidden-down">
+                        <div class="box-body">
+                            <div class="flexbox mb-1">
+                                <span>
+                                    <span class="fa fa-warning fs-40"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span><br>
+                                    Overdue Items
+                                </span>
+                                <span class="text-danger fs-40">@Model.OverdueItems</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.col -->
+
+    </div>
+    <!-- /.row -->
+    <div class="row">
+        <div class="col-xl-4 col-12">
+            <div class="box">
+                <div class="box-body">
+                    <h4 class="box-title">Issued vs. Returned Items to Date</h4>
+                    <div id="issuedReturnedChart"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-8 col-12">
+            <div class="box">
+                <div class="box-header">
+                    <h4 class="box-title">Overdue Items to Date</h4>
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body">
+                    <div class="table-responsive">
+                        <table id="datatable" class="table table-bordered table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Item Title</th>
+                                    <th>User Name</th>
+                                    <th>Contact</th>
+                                    <th>Due Date</th>
+                                    <th>Days Overdue</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.OverdueItemsList)
+                                {
+                                    <tr>
+                                        <td>@item.ItemTitle</td>
+                                        <td>@item.UserName</td>
+                                        <td>@item.Email /  @item.UserPhone </td>
+                                        <td>@item.DaysOverdue</td>
+                                        <td>@item.DueDate.ToString("yyyy-MM-dd")</td>
+                                        <td>@item.DaysOverdue</td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- /.box-body -->
+            </div>
+        </div>
+    </div>
+
+</section>
+@section Scripts {
+
+    <script>
+
+        $(function () {
+            "use strict";
+            Morris.Donut({
+                element: 'issuedReturnedChart',
+                data: [{
+                    label: "Issued",
+                    value: @Model.IssuedCount
+                }, {
+                    label: "Returned",
+                    value: @Model.ReturnedCount
+                }],
+                resize: true,
+                colors: ['#3e8ef7', '#ff4c52']
+            });
+        });
+
+    </script>
+
+}
