--- a/online-library-management-system/Views/Account/Register.cshtml
+++ b/online-library-management-system/Views/Account/Register.cshtml
@@ -54,6 +54,11 @@
                                         <input asp-for="Email" class="form-control" />
                                         <span asp-validation-for="Email" class="text-danger"></span>
                                     </div>
+                                    <div class="form-group">
+                                        <label asp-for="PhoneNo" class="control-label"></label>
+                                        <input asp-for="PhoneNo" class="form-control" />
+                                        <span asp-validation-for="PhoneNo" class="text-danger"></span>
+                                    </div>
                                     <div class="form-row">
                                         <div class="form-group col-md-6">
                                             <label asp-for="Password" class="control-label"></label>
