--- a/online-library-management-system/Views/Items/Details.cshtml
+++ b/online-library-management-system/Views/Items/Details.cshtml
@@ -69,7 +69,7 @@
                                                         @if (item.Availability == "Yes")
                                                         {
                                                             <a asp-controller="Items" asp-action="Reserve" asp-route-id="@item.ItemId" class="btn btn-primary">
-                                                                Reserve a Book
+                                                                Reserve a @(item.ItemType == "Book"? "Book" : "CD" )
                                                             </a>
                                                         }
                                                         else
