--- a/online-library-management-system/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -57,9 +57,9 @@
                             <div class="flexbox mb-1">
                                 <span>
                                     <span class="fa fa-warning fs-40"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span><br>
-                                    Overdue Items
+                                    Expired Reservations
                                 </span>
-                                <span class="text-danger fs-40">@Model.OverdueItems</span>
+                                <span class="text-danger fs-40">@Model.ExpiredReservationsCount</span>
                             </div>
                         </div>
                     </div>
