--- a/online-library-management-system/Views/Account/Register.cshtml
+++ b/online-library-management-system/Views/Account/Register.cshtml
@@ -55,9 +55,9 @@
                                         <span asp-validation-for="Email" class="text-danger"></span>
                                     </div>
                                     <div class="form-group">
-                                        <label asp-for="PhoneNo" class="control-label"></label>
-                                        <input asp-for="PhoneNo" class="form-control" />
-                                        <span asp-validation-for="PhoneNo" class="text-danger"></span>
+                                        <label asp-for="PhoneNumber" class="control-label"></label>
+                                        <input asp-for="PhoneNumber" class="form-control" />
+                                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                                     </div>
                                     <div class="form-row">
                                         <div class="form-group col-md-6">
