--- a/online-library-management-system/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -33,7 +33,7 @@
                             <div class="flexbox mb-1">
                                 <span>
                                     <span class="fa fa-book fs-40"><span class="path1"></span><span class="path2"></span></span><br>
-                                    Total Items (Books/CDs)
+                                    Total Books/CDs
                                 </span>
                                 <span class="text-info fs-40">@Model.TotalItems</span>
                             </div>
@@ -74,7 +74,7 @@
         <div class="col-xl-4 col-12">
             <div class="box">
                 <div class="box-body">
-                    <h4 class="box-title">Issued vs. Returned Items to Date</h4>
+                    <h4 class="box-title">Issued vs. Returned Books/CDs to Date</h4>
                     <div id="issuedReturnedChart"></div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
         <div class="col-xl-8 col-12">
             <div class="box">
                 <div class="box-header">
-                    <h4 class="box-title">Overdue Items to Date</h4>
+                    <h4 class="box-title">Overdue Books/CDs to Date</h4>
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body">
@@ -90,7 +90,7 @@
                         <table id="datatable" class="table table-bordered table-striped">
                             <thead>
                                 <tr>
-                                    <th>Item Title</th>
+                                    <th>Title</th>
                                     <th>User Name</th>
                                     <th>Contact</th>
                                     <th>Due Date</th>
