--- a/online-library-management-system/Areas/Admin/Views/Item/Index.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Item/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="content-header">
     <div class="d-flex align-items-center">
         <div class="me-auto">
-            <h3 class="page-title">Items</h3>
+            <h3 class="page-title">Books/CDs</h3>
         </div>
     </div>
 </div>
@@ -19,8 +19,8 @@
         <div class="col-12">
             <div class="box">
                 <div class="box-header with-border d-md-flex d-block align-items-center justify-content-between">
-                    <h4 class="box-title">Manage Items</h4>
-                    <a asp-area="Admin" asp-action="Create" asp-controller="Item" class="btn btn-primary" >Create Items</a>
+                    <h4 class="box-title">Manage Books/CDs</h4>
+                    <a asp-area="Admin" asp-action="Create" asp-controller="Item" class="btn btn-primary" >Create Book/CD</a>
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body">
