--- a/online-library-management-system/Areas/Admin/Views/Lending/Index.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Lending/Index.cshtml
@@ -53,7 +53,7 @@
                                 <tr>
                                     <th>Reservation ID</th>
                                     <th>User</th>
-                                    <th>Item</th>
+                                    <th>Book/CD</th>
                                     <th>Status</th>
                                     <th>Reserved At</th>
                                     <th>Issued At</th>
