--- a/online-library-management-system/Areas/Admin/Views/Reservation/Index.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Reservation/Index.cshtml
@@ -38,7 +38,7 @@
                             <thead>
                                 <tr>
                                     <th>Reservation ID</th>
-                                    <th>Item</th>
+                                    <th>Title</th>
                                     <th>User</th>
                                     <th>Email</th>
                                     <th>Status</th>
