--- a/online-library-management-system/Areas/Admin/Views/Item/Edit.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Item/Edit.cshtml
@@ -8,7 +8,7 @@
 <div class="content-header">
     <div class="d-flex align-items-center">
         <div class="me-auto">
-            <h3 class="page-title">Edit Item</h3>
+            <h3 class="page-title">Edit Book/CD</h3>
         </div>
     </div>
 </div>
@@ -19,7 +19,7 @@
         <div class="col-lg-6 col-12">
             <div class="box">
                 <div class="box-header with-border">
-                    <h4 class="box-title">Edit Item Details</h4>
+                    <h4 class="box-title">Edit Book/CD</h4>
                 </div>
                 <div class="box-body">
                     <partial name="_FormPartial" />
