--- a/online-library-management-system/Areas/Admin/Views/AuthorAndArtist/_FormPartial.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/AuthorAndArtist/_FormPartial.cshtml
@@ -5,7 +5,7 @@
 }
 
 <form class="form" asp-action="@action" asp-controller="AuthorAndArtist" asp-area="Admin" method="post">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
     <div class="box-body">
         <div class="form-group">
             <label class="form-label">Name</label>
