--- a/online-library-management-system/Areas/Admin/Views/Category/_FormPartial.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Category/_FormPartial.cshtml
@@ -6,7 +6,7 @@
 
 
 <form class="form" asp-action="@action" asp-controller="Category" asp-area="Admin" method="post">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
     <div class="box-body">
         <div class="form-group">
             <label class="form-label">Name</label>
