--- a/online-library-management-system/Areas/Admin/Views/Lending/Index.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Lending/Index.cshtml
@@ -23,7 +23,7 @@
                 </div>
                 <!-- Search Form -->
                 <form class="form" asp-action="Index" asp-controller="Lending" asp-area="Admin" method="get">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
                     <div class="box-body">
                         <div class="form-group">
                             <input type="text" name="search" class="form-control" placeholder="Search" required>
