--- a/online-library-management-system/Views/Account/Login.cshtml
+++ b/online-library-management-system/Views/Account/Login.cshtml
@@ -35,7 +35,7 @@
                                 <h6 class="sub-heading-v2">Welcome Back</h6>
                                 <h2 class="heading-v2">Welcome to Sydenham Library</h2>
                                 <form asp-action="Login" method="post" asp-route-returnurl="@ViewData["ReturnUrl"]">
-                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                    <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
                                     <div class="form-group">
                                         <label asp-for="Email" class="control-label"></label>
                                         <input asp-for="Email" class="form-control" />
