--- a/online-library-management-system/Views/Account/Register.cshtml
+++ b/online-library-management-system/Views/Account/Register.cshtml
@@ -36,7 +36,7 @@
                                 <h6 class="sub-heading-v2">Join Now</h6>
                                 <h2 class="heading-v2">Create Account To Access Sydenham Library</h2>
                                 <form asp-action="Register" method="post" asp-route-returnurl="@ViewData["ReturnUrl"]">
-                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                    <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
                                     <div class="form-row">
                                         <div class="form-group col-md-6">
                                             <label asp-for="FirstName" class="control-label"></label>
