--- a/online-library-management-system/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -103,8 +103,7 @@
                                     <tr>
                                         <td>@item.ItemTitle</td>
                                         <td>@item.UserName</td>
-                                        <td>@item.Email /  @item.UserPhone </td>
-                                        <td>@item.DaysOverdue</td>
+                                        <td>@item.UserEmail /  @item.UserPhone </td>
                                         <td>@item.DueDate.ToString("yyyy-MM-dd")</td>
                                         <td>@item.DaysOverdue</td>
                                     </tr>
