--- a/online-library-management-system/Views/Shared/_MenuPartial.cshtml
+++ b/online-library-management-system/Views/Shared/_MenuPartial.cshtml
@@ -1,3 +1,3 @@
-﻿<li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-<li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Items" asp-action="Index">Books & CDs</a></li>
-<li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Contact" asp-action="Index">Contact Us</a></li>
+﻿<li class="nav-item"><a class="nav-link" style="background: #4188e5;" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+<li class="nav-item"><a class="nav-link" style="background: #41cbc1;" asp-area="" asp-controller="Items" asp-action="Index">Books & CDs</a></li>
+<li class="nav-item"><a class="nav-link" style="background: #f65b80;" asp-area="" asp-controller="Contact" asp-action="Index">Contact Us</a></li>
